# yotta

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: bignum.rs  colors.rs  digits.rs  errors.rs  functions.rs  lib.rs
src/traits/: assignment.rs  compare.rs  fmt.rs  functions.rs  mod.rs  ops.rs
tests/: tests.rs
